--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-flume = "0.8"
+flume = { git = "https://github.com/Restioson/flume.git", branch = "async-edits" }
 tokio = { version = "0.2", features = ["full"] }
 futures = "0.3"
